tests/type_errors/result_arithmetic2.nos
# expect_error: does not implement Num
main() = Ok(5) + Ok(10)
